# darkmod

./: .gitignore  LICENSE  README.md  output.vti  output.vtp  pyproject.toml  rotation_gradient.h5  straight_edge_dislocation.h5  straight_edge_dislocation.xdmf  strain_gradient.h5  test.h5  test.xdmf  tmp_profile_dump
darkmod/: beam.py  crl.py  crystal.py  deformation.py  detector.py  distribution.py  goniometer.py  laue.py  models.py  projector.py  properties.py  reconstruct.py  resolution.py  scan.py  tmp0.ipynb  tmp_profile_dump  transforms.py  utils.py
docs/source/: conf.py  index.rst
misc/: point_data.vtp  rotation_gradient.xdmf  strain_gradient.h5  strain_gradient.xdmf
sandbox/: backpropagation_error.ipynb  errf.ipynb  out_of_image_plane.ipynb  refractive_decrement.ipynb  rotation_precision.ipynb  sed.ipynb  test.py  tmp.ipynb  tmp.py  wire.ipynb
tests/: test_crl.py  test_crystal.py  test_distribution.py  test_goniometer.py  test_projector.py  test_resolution.py  test_transforms.py
tests/end_to_end/: HirtheLothe1992.ipynb  astra_trouble.py  disloc.ipynb  eta_nonzero.py  flips.py  mosa_scan.py  mosa_scan_old.py  plots.py  proj.ipynb  rocking_curve.py  rolling_curve.py  strain_mosa_3reflections.py  strain_mosa_scan.py  test.ipynb  trunc_tth_curve.py  tth_curve.py
tests/end_to_end/defrec/: aliasing.ipynb  ideas.md  integration_error_analysis.ipynb  opti.py  paper_plots.ipynb  params.ipynb  rec3d.ipynb  reconstruct.py  reviewer1.ipynb  strain_mosa.py  stress.py  tets.ipynb
tests/end_to_end/defrec/saves/paper_1_run_3/: log.txt
